# semantic-search-service

./: .coderabbit.yaml  .env.example  .gitignore  Dockerfile  SEMANTIC_SEARCH_SERVICE_INVENTORY.md  TECHNICAL_CHANGE_LOG.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  start_service.sh  test-results.xml
.scannerwork/: report-task.txt
config/: abbreviation_expansion.json  domain_taxonomy.json
docs/: ARCHITECTURE.md  GRAPH_RAG_POC.md  Phase3_AntiPattern_Audit.md  RELEVANCE_TUNING_PLAN.md  TECHNICAL_CHANGE_LOG.md  openapi.yaml
docs/reports/: BENCHMARK_REPORT.md  CITATION_ACCURACY_REPORT.md  FINAL_QUALITY_GATE_REPORT.md  SPIDER_WEB_COVERAGE_REPORT.md
poc/: README.md  docker-compose.poc.yml  requirements-poc.txt
poc/data/: sample_taxonomy.json
poc/scripts/: init_neo4j_schema.cypher  init_qdrant_collection.py  load_sample_taxonomy.py  verify_data.py
poc/src/: __init__.py  neo4j_client.py  qdrant_client.py
poc/tests/: __init__.py
poc/tools/: __init__.py
scripts/: demo_graph_rag.py  generate_benchmark_report.py  generate_citation_accuracy_report.py  seed_neo4j.py  seed_qdrant.py  validate_0.2.1_embed.sh  validate_0.2.2_search.sh  validate_0.2.3_real_clients.sh  validate_domain_filter.py
src/: infrastructure_config.py  main.py
src/api/: __init__.py  app.py  dependencies.py  models.py  routes.py
src/core/: config.py  logging.py
src/graph/: __init__.py  exceptions.py  health.py  neo4j_client.py  relationships.py  schema.py  taxonomy_loader.py  (+1 more)
tests/: conftest.py  fakes.py
(+283 files in other folders)
